--- a/package.json
+++ b/package.json
@@ -10,5 +10,24 @@
     "todo"
   ],
   "author": "mason",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^9.3.0"
+  },
+  "presets": [
+    "env"
+  ],
+  "dependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/express": "^4.11.0",
+    "@types/highland": "^2.10.6",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "highland": "^2.11.1",
+    "jquery": "^3.2.1",
+    "monet": "^0.8.10",
+    "popper.js": "^1.12.9"
+  }
 }
